--- a/acerca de.html
+++ b/acerca de.html
@@ -89,7 +89,7 @@
             Somos una empresa de impresión 3D asequible y sostenible. Nuestra misión es buscar una alternativa 
             a la fabricación de juguetes de manera tradicional.
         </p>
-        <img src="C:\Users\diecc\OneDrive\Escritorio\dfff\OIP.jpg" alt="Juguetes ecológicos" width="200" height="200">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/71woyVcn3HL._SL1500_.jpg" alt="Juguetes ecológicos" width="200" height="200">
         <p>
             En esta empresa creemos bastante en la sostenibilidad y en el poder del reciclaje para educar. Nuestro equipo está 
             comprometido a diseñar juguetes ecológicos y didácticos, en un esfuerzo por combatir el cambio climático.
