--- a/no me disfff.html
+++ b/no me disfff.html
@@ -79,7 +79,7 @@
         <section id="inicio">
             <h1>Bienvenido  EcoToys 3D</h1>
             <p>¡Transformamos plástico reciclado en increíbles juguetes!</p>
-            <img src="C:\Users\diecc\OneDrive\Escritorio\dfff\PJ26SSSCzpCqOmluWw-D10Gr-2v7YhRP1Pk9DYwYZoA.webp" width="200" height="200">
+            <img src="https://i.pinimg.com/originals/3f/9c/15/3f9c15ffca8ef15405e0dfae6704d1bc.jpg" width="200" height="200">
            
             <p>Descubre nuestros juguetes educativos, decoraciones únicas y herramientas prácticas hechas con materiales sostenibles.</p>
         </section>
