--- a/servicios.html
+++ b/servicios.html
@@ -85,7 +85,7 @@
             Ofrecemos una disposición de máquinas de impresión 3D para atender cualquier pedido pequeño, 
             como estatuillas o juguetes personalizados.
         </p>
-        <img src="C:\Users\diecc\OneDrive\Escritorio\dfff\pngtree-this-3d-printed-statue-image_2928880.jpg" 
+        <img src="https://images-na.ssl-images-amazon.com/images/I/71woyVcn3HL._SL1500_.jpg" 
              alt="Impresión 3D" width="200" height="200">
     </div>
     <!-- Pie de página -->
