--- a/Inicio.index.html
+++ b/Inicio.index.html
@@ -74,6 +74,15 @@
             <li><a href="#Portafolio">Portafolio</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
+        <!-- menu.html -->
+<nav>
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="acerca de.html">Acerca de</a></li>
+        <li><a href="servicios.html">Servicios/a></li>
+        <li><a href="portafolio.html">Servicios/a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+    </ul>
     </nav>
     <div class="content">
         <section id="inicio">
