--- a/index.html
+++ b/index.html
@@ -68,21 +68,12 @@
     <!-- Menú de navegación -->
     <nav>
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#Acerca de">Acerca de</a></li>
-            <li><a href="#Servicios">Servicios</a></li>
-            <li><a href="#Portafolio">Portafolio</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-        <!-- menu.html -->
-<nav>
-    <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="acerca de.html">Acerca de</a></li>
-        <li><a href="servicios.html">Servicios/a></li>
-        <li><a href="portafolio.html">Servicios/a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-    </ul>
+            <li><a href="#index.html">Inicio</a></li>
+            <li><a href="#dcerca de.html">Acerca de</a></li>
+            <li><a href="#servicios.html">Servicios</a></li>
+            <li><a href="#portafolio.html">Portafolio</a></li>
+            <li><a href="#contacto.html">Contacto</a></li>
+        </ul>  
     </nav>
     <div class="content">
         <section id="inicio">
