--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <nav>
         <ul>
             <li><a href="#index.html">Inicio</a></li>
-            <li><a href="#dcerca de.html">Acerca de</a></li>
+            <li><a href="#acerca de.html">Acerca de</a></li>
             <li><a href="#servicios.html">Servicios</a></li>
             <li><a href="#portafolio.html">Portafolio</a></li>
             <li><a href="#contacto.html">Contacto</a></li>
