--- a/acerca de.html
+++ b/acerca de.html
@@ -75,11 +75,11 @@
     <!-- Menú de navegación -->
     <nav>
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#acerca-de">Acerca de</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#portafolio">Portafolio</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#inicio.html">Inicio</a></li>
+            <li><a href="#acerca de.html">Acerca de</a></li>
+            <li><a href="#servicios.html">Servicios</a></li>
+            <li><a href="#portafolio.html">Portafolio</a></li>
+            <li><a href="#contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <!-- Contenido principal -->
