--- a/portafolio.html
+++ b/portafolio.html
@@ -96,7 +96,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#inicio.html">Inicio</a></li>
+            <li><a href="#index.html">Inicio</a></li>
             <li><a href="#acerca de.html">Acerca de</a></li>
             <li><a href="#servicios.html">Servicios</a></li>
             <li><a href="#portafolio.html">Portafolio</a></li>
