--- a/contacto.html
+++ b/contacto.html
@@ -99,11 +99,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#acerca-de">Acerca de</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#portafolio">Portafolio</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#index.html">Inicio</a></li>
+            <li><a href="#acerca de.html">Acerca de</a></li>
+            <li><a href="#servicios.html">Servicios</a></li>
+            <li><a href="#portafolio.html">Portafolio</a></li>
+            <li><a href="#contacto.html">Contacto</a></li>
         </ul>
     </nav>
     <!-- Sección de contacto -->
